# aoc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.go
2024/1/: main.go  main_test.go
2024/12/: part2.py
2024/3/: main_test.go
2024/4/: main.go
2024/5/: main.go  main_test.go
2024/6/part1/: main_test.go
2024/6/part2/: main.go
2024/7/: main.go
2024/8/: main.go  main_test.go
2024/9/: main.go
day1/: main.py
go/2024/10/: part1.py
go/2024/11/: part1.py
go/2024/12/: part1.py
go/2024/2/: main.go  main_test.go
go/2024/3/: main.go
go/2024/4/: main.go  main_test.go
go/2024/5/: main.go
go/2024/6/part1/: main.go
go/2024/6/part2/: main_test.go
go/2024/7/: main_test.go
go/2024/9/: main_test.go
libs/utils/: CMakeLists.txt
libs/utils/include/: aoc_utils.hpp  debug_log.hpp  file.hpp  print.hpp  string.hpp
libs/utils/src/: file.cpp  print.cpp  string.cpp
libs/utils/tests/: test_file.cpp  test_string.cpp
scripts/: setup.sh
solutions/2024/: CMakeLists.txt
solutions/2024/day01/: solution.cpp  solution.h  tests.cpp
solutions/2025/: CMakeLists.txt
solutions/2025/day01/: solution.cpp  tests.cpp
solutions/2025/day02/: solution.cpp  solution.h  tests.cpp
solutions/2025/day03/: solution.cpp  solution.h  tests.cpp
solutions/setup_script/: main.cpp
template/: main.go  main_test.go
